feat: update auth and moon-api + add more chains
