# packages/moon-api/src/moon-api.ts
@@ -8,7 +8,19 @@ import { BytesLike, arrayify } from '@ethersproject/bytes';
 import { hashMessage } from '@ethersproject/hash';
 import { MoonSDKConfig } from '@moonup/types/src/types';
 import { Auth, RefreshTokenResponse } from './auth';
-import { Accounts } from './lib';
+import {
+	Aave,
+	Accounts,
+	Conveyorfinance,
+	Ens,
+	Erc1155,
+	Erc20,
+	Erc4337,
+	Erc721,
+	Oneinch,
+	Uniswap,
+	Yearn,
+} from './lib';
 import {
 	AccountControllerResponse,
 	AccountResponse,
@@ -20,6 +32,16 @@ import { ContentType } from './lib/http-client';
 
 export class MoonApi {
 	private AccountsSDK: Accounts;
+	private AaveSDK: Aave;
+	private ConveyorfinanceSDK: Conveyorfinance;
+	private ENSSDK: Ens;
+	private Erc20SDK: Erc20;
+	private Erc1155SDK: Erc1155;
+	private Erc721SDK: Erc721;
+	private Erc4337SDK: Erc4337;
+	private OneinchSDK: Oneinch;
+	private UniswapSDK: Uniswap;
+	private YearnSDK: Yearn;
 	private AuthSDK: Auth;
 	private wallet: string;
 	private chainId: number;
@@ -45,34 +67,158 @@ export class MoonApi {
 			},
 			securityWorker: this.config.Auth.securityWorker,
 		});
+
+		this.AaveSDK = new Aave({
+			baseUrl: 'https://vault-api.usemoon.ai',
+			baseApiParams: {
+				secure: true,
+				type: ContentType.Json,
+				format: 'json',
+			},
+			securityWorker: this.config.Auth.securityWorker,
+		});
+
+		this.ENSSDK = new Ens({
+			baseUrl: 'https://vault-api.usemoon.ai',
+			baseApiParams: {
+				secure: true,
+				type: ContentType.Json,
+				format: 'json',
+			},
+			securityWorker: this.config.Auth.securityWorker,
+		});
+
+		this.Erc20SDK = new Erc20({
+			baseUrl: 'https://vault-api.usemoon.ai',
+			baseApiParams: {
+				secure: true,
+				type: ContentType.Json,
+				format: 'json',
+			},
+			securityWorker: this.config.Auth.securityWorker,
+		});
+
+		this.Erc1155SDK = new Erc1155({
+			baseUrl: 'https://vault-api.usemoon.ai',
+			baseApiParams: {
+				secure: true,
+				type: ContentType.Json,
+				format: 'json',
+			},
+			securityWorker: this.config.Auth.securityWorker,
+		});
+
+		this.Erc721SDK = new Erc721({
+			baseUrl: 'https://vault-api.usemoon.ai',
+			baseApiParams: {
+				secure: true,
+				type: ContentType.Json,
+				format: 'json',
+			},
+			securityWorker: this.config.Auth.securityWorker,
+		});
+
+		this.Erc4337SDK = new Erc4337({
+			baseUrl: 'https://vault-api.usemoon.ai',
+			baseApiParams: {
+				secure: true,
+				type: ContentType.Json,
+				format: 'json',
+			},
+			securityWorker: this.config.Auth.securityWorker,
+		});
+
+		this.OneinchSDK = new Oneinch({
+			baseUrl: 'https://vault-api.usemoon.ai',
+			baseApiParams: {
+				secure: true,
+				type: ContentType.Json,
+				format: 'json',
+			},
+			securityWorker: this.config.Auth.securityWorker,
+		});
+
+		this.UniswapSDK = new Uniswap({
+			baseUrl: 'https://vault-api.usemoon.ai',
+			baseApiParams: {
+				secure: true,
+				type: ContentType.Json,
+				format: 'json',
+			},
+			securityWorker: this.config.Auth.securityWorker,
+		});
+
+		this.YearnSDK = new Yearn({
+			baseUrl: 'https://vault-api.usemoon.ai',
+			baseApiParams: {
+				secure: true,
+				type: ContentType.Json,
+				format: 'json',
+			},
+			securityWorker: this.config.Auth.securityWorker,
+		});
+
+		this.ConveyorfinanceSDK = new Conveyorfinance({
+			baseUrl: 'https://vault-api.usemoon.ai',
+			baseApiParams: {
+				secure: true,
+				type: ContentType.Json,
+				format: 'json',
+			},
+			securityWorker: this.config.Auth.securityWorker,
+		});
+
 		this.wallet = '';
 		this.chainId = 1;
 	}
-	// // public setAuthorization(type: string) {
-	// // return this.AccountsSDK.sec
-	// // }
-	// public setToken(token: string) {
-	// 	return this.AccountsSDK.setSecurityData({ token });
-	// }
-	// public setWallet(wallet: string) {
-	// 	this.wallet = wallet;
-	// }
 
-	// public getWallet(): string {
-	// 	return this.wallet;
-	// }
+	public getAuthSDK(): Auth {
+		return this.AuthSDK;
+	}
 
-	// public getAccountsSDK(): Accounts {
-	// 	return this.AccountsSDK;
-	// }
+	public getAccountsSDK(): Accounts {
+		return this.AccountsSDK;
+	}
 
-	// public setChainId(chainId: number) {
-	// 	this.chainId = chainId;
-	// }
+	public getAaveSDK(): Aave {
+		return this.AaveSDK;
+	}
 
-	// public getChainId(): number {
-	// 	return this.chainId;
-	// }
+	public getConveyorfinanceSDK(): Conveyorfinance {
+		return this.ConveyorfinanceSDK;
+	}
+
+	public getENSSDK(): Ens {
+		return this.ENSSDK;
+	}
+
+	public getErc20SDK(): Erc20 {
+		return this.Erc20SDK;
+	}
+
+	public getErc1155SDK(): Erc1155 {
+		return this.Erc1155SDK;
+	}
+
+	public getErc721SDK(): Erc721 {
+		return this.Erc721SDK;
+	}
+
+	public getErc4337SDK(): Erc4337 {
+		return this.Erc4337SDK;
+	}
+
+	public getOneinchSDK(): Oneinch {
+		return this.OneinchSDK;
+	}
+
+	public getUniswapSDK(): Uniswap {
+		return this.UniswapSDK;
+	}
+
+	public getYearnSDK(): Yearn {
+		return this.YearnSDK;
+	}
 
 	public async refreshAccount(token: string): Promise<RefreshTokenResponse> {
 		const response = await this.AuthSDK.refreshToken({ refreshToken: token });
